--- a/templates/ctrct.html
+++ b/templates/ctrct.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <!-- Meta 태그 및 CSS, JS 라이브러리 -->
-<link rel="stylesheet" href="cntrsty.css">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/cntrsty.css') }}">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
