--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <link rel="stylesheet" href="idxsty.css">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/idxsty.css') }}">
+
   <meta charset="UTF-8">
   <title>Flask 애니메이션</title>
   <style>
