--- a/templates/index.html
+++ b/templates/index.html
@@ -75,11 +75,11 @@
 
       // 버튼 클릭 이벤트 설정
       managerButton.addEventListener("click", () => {
-        window.location.href = "login.html";
+        window.location.href = "/templates/login.html";
       });
 
       workerButton.addEventListener("click", () => {
-        window.location.href = "feedback.html";
+        window.location.href = "/templates/feed.html";
       });
     });
   </script>
