--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
     <title>Google Login</title>
 </head>
 <body>
-  <a href="https://accounts.google.com/o/oauth2/auth?client_id=1043119648115-o48djrnuu4m5vrnv8nvt7jp9noi4uh1o&redirect_uri=signforall.net&response_type=code">
+  <a href="https://accounts.google.com/o/oauth2/auth?client_id=1043119648115-o48djrnuu4m5vrnv8nvt7jp9noi4uh1o&redirect_uri=signforall.net/login.html&response_type=code">
   Google로 로그인
   </a>
 </body>
