--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='css/idxsty.css') }}">
 
   <meta charset="UTF-8">
-  <title>Flask 애니메이션</title>
+  <title>SigForAll.net</title>
   <style>
     body {
       background-color: #f5f5f5;
@@ -75,11 +75,10 @@
 
       // 버튼 클릭 이벤트 설정
       managerButton.addEventListener("click", () => {
-        window.location.href = "/templates/login.html";
+        window.location.href = "login.html";
       });
-
       workerButton.addEventListener("click", () => {
-        window.location.href = "/templates/feed.html";
+        window.location.href = "feed.html";
       });
     });
   </script>
