--- a/templates/index.html
+++ b/templates/index.html
@@ -75,10 +75,10 @@
 
       // 버튼 클릭 이벤트 설정
       managerButton.addEventListener("click", () => {
-        window.location.href = "login.html";
+        window.location.href = "login";
       });
       workerButton.addEventListener("click", () => {
-        window.location.href = "feed.html";
+        window.location.href = "feed";
       });
     });
   </script>
