--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/idxsty.css') }}">
-
+  <meta name ="google-signin-client_id" content="1043119648115-o48djrnuu4m5vrnv8nvt7jp9noi4uh1o.apps.googleusercontent.com">
   <meta charset="UTF-8">
   <title>SigForAll.net</title>
   <style>
@@ -45,9 +45,14 @@
     <button id="manager-button">관리자 로그인</button>
     <button id="worker-button">근로자 로그인</button>
   </div>
-
+  
+  <script src="https://apis.google.com/js/platform.js?onload=init" async defer>
+    //구글 api 사용을 위한 스크립트
+  </script>
+  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
-<script>
+  <script>
+  
     // 관리자 로그인 버튼 애니메이션
     const managerButton = document.querySelector("#manager-button");
     const managerButtonAnimation = anime({
@@ -76,12 +81,51 @@
       // 버튼 클릭 이벤트 설정
       managerButton.addEventListener("click", () => {
         // login.html의 로그인 버튼을 클릭합니다.
-        document.querySelector("#GgCustomLogin").click();
+        window.location.href = "{{url_for('login')}}";
       });
       workerButton.addEventListener("click", () => {
         window.location.href = "{{url_for('feed')}}";
       });
     });
+    
+    
+    
+  function init() {
+	  gapi.load('auth2', function() {
+  		gapi.auth2.init();
+  		options = new gapi.auth2.SigninOptionsBuilder();
+  		options.setPrompt('select_account');
+          // 추가는 Oauth 승인 권한 추가 후 띄어쓰기 기준으로 추가
+  		options.setScope('email profile openid https://www.googleapis.com/auth/user.birthday.read');
+          // 인스턴스의 함수 호출 - element에 로그인 기능 추가
+          // GgCustomLogin은 li태그안에 있는 ID, 위에 설정한 options와 아래 성공,실패시 실행하는 함수들
+  		gapi.auth2.getAuthInstance().attachClickHandler('managerButton', options, onSignIn, onSignInFailure);
+	  })
+  }  
+    
+  function onSignIn(googleUser) {
+  	var access_token = googleUser.getAuthResponse().access_token
+  	$.ajax({
+      	// people api를 이용하여 프로필 및 생년월일에 대한 선택동의후 가져온다.
+  		url: 'https://people.googleapis.com/v1/people/me'
+          // key에 자신의 API 키를 넣습니다.
+  		, data: {personFields:'birthdays', key:'AIzaSyCkfH0PlyIToGKoItEZLDFf-kT4LBJeO2o', 'access_token': access_token}
+  		, method:'GET'
+  	})
+  	.done(function(e){
+          //프로필을 가져온다.
+  		var profile = googleUser.getBasicProfile();
+  		console.log(profile)
+  	})
+  	.fail(function(e){
+  		console.log(e);
+  	})
+  }
+  
+  function onSignInFailure(t){		
+  	console.log(t);
+  }
+  
   </script>
 </body>
 </html>
