--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
       </table>
     </main>
     
-<a href="write.html" class="btn btn-primary float-end">글쓰기</a>
+<a href="/templates/write.html" class="btn btn-primary float-end">글쓰기</a>
 
     <footer>
       <nav aria-label="페이지">
